<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TrailActivity">
    <item
        android:id="@+id/action_Alphanumeric"
        android:orderInCategory="100"
        android:title="@string/alphanumeric"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Type"
        android:orderInCategory="102"
        android:title="@string/bike"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Search"
        android:orderInCategory="0"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon ="@drawable/ic_action_name"
        app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>
